Fix docker image and port syntax in deploy.yml

--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -7,10 +7,9 @@
     - nmae: docker container run
       docker_container:
         name: web
-        image: nginx
-        tag: latest
+        image: nginx:latest
         tty: true
         state: started
         ports:
-        80:80
+         - "80:80"
        
