--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -4,12 +4,12 @@
   become: true
 
   tasks:
-    - nmae: docker container run
+    - name: docker container run
       docker_container:
         name: web
         image: nginx:latest
         tty: true
         state: started
         ports:
-         - "80:80"
+          - "80:80"
        
